# variational-remeshing

./: .gitmodules  CMakeLists.txt  main.cpp  polygon_clip.h  readme.md  weighted_cvd.cpp  weighted_cvd.h
